# pedro-bots

./: .env  .env.example  .gitignore  CLAUDE.md  CONTRIBUTORS.md  Dockerfile  LICENSE  Makefile  README.md  ROADMAP.md  docker-compose.yml  entities.json  mempalace.yaml  policy.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 071441bbc59f_create_socialwatch_schema_and_tables.py  e4c276f4430b_seed_podcast_and_substack_feeds.py
charts/pedro-agents/: Chart.yaml  values.yaml
charts/pedro-agents/templates/: _helpers.tpl  configmap.yaml  cronjob-social.yaml
charts/reddit-watcher/: Chart.yaml  values.yaml
charts/reddit-watcher/templates/: cronjob-monitor.yaml  cronjob-suggest.yaml
docs/: RedditWatch-PRD-EDD.md  TweetWatch-PRD-EDD.md  deployment.md
docs/adr/: 001-discord-notification.md  002-multi-agent-architecture.md  003-helm-chart-deployment.md
k8s/: configmap.yaml  cronjob-monitor.yaml  cronjob-social.yaml  cronjob-suggest.yaml  namespace.yaml
migrations/: 001_tweetwatch.sql  002_seed_topics.sql  003_reddit_topics.sql  004_reddit_schema.sql  005_rename_tables.sql
scripts/: add_feed.py  check_scrape.py  eval_classification.py  export_training_data.py  migrate.sh
src/: main.py  policy.yaml
src/core/: config.py  middleware_config.py
src/core/agents/: monitor.py  social_poster.py  suggestion.py
src/core/tools/: bluesky.py  discord.py  linkedin.py  reddit.py  rss.py  social_tools.py  substack.py  supabase_tools.py
src/scripts/: eval_social_poster.py
tests/: test_monitor.py  test_reddit.py
